# api-yatube

./: README.md  pyproject.toml  requirements.txt
yatube_api/api/: serializers.py  urls.py  views.py
yatube_api/posts/: models.py
yatube_api/yatube_api/: settings.py  urls.py
